cmake_minimum_required(VERSION 3.11)
add_library(Costume STATIC
 CCostumeFactory.h CCostumeFactory.cpp CCostume_Archer_Flame.h CCostume_Archer_Flame.cpp
 CCostume_Archer_Thunder.h CCostume_Archer_Thunder.cpp CCostume_Burner.h CCostume_Burner.cpp
 CCostume_Chinese.h CCostume_Chinese.cpp CCostume_Festa.h CCostume_Festa.cpp
 CCostume_Firefighter.h CCostume_Firefighter.cpp CCostume_Swimsuit.h CCostume_Swimsuit.cpp
  CCostume_Uniform.h CCostume_Uniform.cpp CCosutumeBase.h CCosutumeBase.cpp 
)